# Lollo

./: Fixme
src/: CMakeLists.txt  ToDoApp.cpp  ToDoApp.h  main.cpp
src/Control/: Control.cpp  Control.h  ItemController.cpp  ItemController.h  ItemControllerObserver.cpp  ItemControllerObserver.h  ListController.h
src/Model/: Model.cpp  Model.h  Task.cpp  Task.h  ToDoItem.cpp  ToDoItem.h  ToDoList.cpp  ToDoList.h
src/View/: DateSelection.cpp  DateSelection.h  Frame.cpp  Frame.h  Priority.h  PrioritySelection.cpp  PrioritySelection.h  ToDoApp.cpp  ToDoApp.h  View.cpp  View.h
